--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -1,10 +1,13 @@
 <div>
   <link href="./navigation-links.css" rel="stylesheet" />
   <nav class="navigation-links-nav">
-    <span><span>About</span></span>
-    <span class="navigation-links-text1"><span>Features</span></span>
-    <span class="navigation-links-text2"><span>Pricing</span></span>
-    <span class="navigation-links-text3"><span>Team</span></span>
-    <span class="navigation-links-text4"><span>Blog</span></span>
+    <a href="about.html" class="navigation-links-navlink"><span>About</span></a>
+    <a href="projects.html" class="navigation-links-navlink1">
+      <span>Projects</span>
+    </a>
+    <a href="collaborate.html" class="navigation-links-navlink2">
+      <span>Collaborate</span>
+    </a>
+    <a href="blog.html" class="navigation-links-navlink3"><span>Blog</span></a>
   </nav>
 </div>
