--- a/src/views/blog.css
+++ b/src/views/blog.css
@@ -1,105 +1,12 @@
-.navigation-links-nav {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
-.navigation-links-navlink {
-  text-decoration: none;
-}
-.navigation-links-navlink1 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.navigation-links-navlink2 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.navigation-links-navlink3 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-.navigation-links-root-class-name9 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name12 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name15 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-.navigation-links-root-class-name17 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name20 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name23 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-@media(max-width: 767px) {
-  .navigation-links-nav {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-  .navigation-links-navlink {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink1 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink2 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink3 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-}
-
-.home-container {
+.blog-container {
   width: 100%;
   display: flex;
   overflow: auto;
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
 }
-.home-header {
+.blog-header {
   width: 1480px;
   height: 96px;
   display: flex;
@@ -111,16 +18,16 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-navlink {
+.blog-navlink {
   display: contents;
 }
-.home-image {
+.blog-image {
   width: 91px;
   height: 85px;
   object-fit: cover;
   text-decoration: none;
 }
-.home-container1 {
+.blog-container1 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -129,31 +36,31 @@
   align-items: space-between;
   flex-direction: column;
 }
-.home-navlink1 {
+.blog-navlink1 {
   display: contents;
 }
-.home-component {
+.blog-component {
   text-decoration: none;
 }
-.home-nav {
+.blog-nav {
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
 }
-.home-icon {
+.blog-icon {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
   text-decoration: none;
 }
-.home-burger-menu {
+.blog-burger-menu {
   display: none;
 }
-.home-icon02 {
+.blog-icon02 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   display: none;
 }
-.home-mobile-menu {
+.blog-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
@@ -166,83 +73,84 @@
   justify-content: space-between;
   background-color: #fff;
 }
-.home-nav1 {
+.blog-nav1 {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.home-container2 {
+.blog-container2 {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-.home-image1 {
+.blog-image1 {
   height: 2rem;
 }
-.home-close-mobile-menu {
+.blog-close-mobile-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.home-icon04 {
+.blog-icon04 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.home-icon06 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.home-icon08 {
+.blog-icon06 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
 }
-.home-icon10 {
+.blog-icon08 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
+}
+.blog-icon10 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.home-banner {
+.blog-banner {
   width: 100%;
   height: 759px;
   display: flex;
   padding: var(--dl-space-space-threeunits);
   align-items: center;
+  padding-top: 48px;
   flex-direction: column;
   justify-content: space-between;
 }
-.home-text {
+.blog-text {
   height: 0px;
   font-size: 3rem;
   align-self: stretch;
   text-align: center;
 }
-.home-text05 {
+.blog-text04 {
   font-size: 20px;
   max-width: var(--dl-size-size-maxwidth);
   margin-top: var(--dl-space-space-twounits);
   text-align: center;
   margin-bottom: var(--dl-space-space-twounits);
 }
-.home-button {
+.blog-button {
   transition: 0.3s;
   padding-top: var(--dl-space-space-unit);
   padding-left: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-unit);
 }
-.home-button:hover {
+.blog-button:hover {
   transform: scale(1.02);
 }
-.home-navlink2 {
+.blog-navlink2 {
   text-decoration: none;
 }
-.home-text15:hover {
+.blog-text09:hover {
   transform: scale(1.02);
 }
-.home-footer {
+.blog-footer {
   width: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
@@ -254,14 +162,14 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-container3 {
+.blog-container3 {
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
 }
-.home-nav2 {
+.blog-nav2 {
   flex: 0 0 auto;
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
@@ -269,12 +177,12 @@
   align-items: center;
   flex-direction: row;
 }
-.home-image2 {
+.blog-image2 {
   width: 91px;
   height: 85px;
   object-fit: cover;
 }
-.home-separator {
+.blog-separator {
   flex: 0 0 auto;
   width: 100%;
   height: 0px;
@@ -292,7 +200,7 @@
   border-left-width: 0px;
   border-right-width: 0px;
 }
-.home-container4 {
+.blog-container4 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -300,98 +208,98 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.home-icon-group2 {
+.blog-icon-group2 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
 }
-.home-link1 {
+.blog-link1 {
   display: contents;
 }
-.home-icon12 {
+.blog-icon12 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
   text-decoration: none;
 }
 @media(max-width: 991px) {
-  .home-icon02 {
+  .blog-icon02 {
     display: flex;
   }
-  .home-text05 {
+  .blog-text04 {
     max-width: 100%;
   }
 }
 @media(max-width: 767px) {
-  .home-header {
+  .blog-header {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .home-nav {
+  .blog-nav {
     display: none;
   }
-  .home-burger-menu {
+  .blog-burger-menu {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .home-banner {
+  .blog-banner {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .home-text05 {
+  .blog-text04 {
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
   }
-  .home-footer {
+  .blog-footer {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .home-separator {
+  .blog-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-left: 0px;
     margin-right: 0px;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container4 {
+  .blog-container4 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text17 {
+  .blog-text11 {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
 @media(max-width: 479px) {
-  .home-header {
+  .blog-header {
     padding: var(--dl-space-space-unit);
   }
-  .home-icon-group {
+  .blog-icon-group {
     display: none;
   }
-  .home-mobile-menu {
+  .blog-mobile-menu {
     padding: 16px;
   }
-  .home-banner {
+  .blog-banner {
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
   }
-  .home-footer {
+  .blog-footer {
     padding: var(--dl-space-space-unit);
   }
-  .home-separator {
+  .blog-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container4 {
+  .blog-container4 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text17 {
+  .blog-text11 {
     text-align: center;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
