--- a/src/views/collaborate.css
+++ b/src/views/collaborate.css
@@ -1,107 +1,14 @@
-.navigation-links-nav {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
-.navigation-links-navlink {
-  text-decoration: none;
-}
-.navigation-links-navlink1 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.navigation-links-navlink2 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.navigation-links-navlink3 {
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-.navigation-links-root-class-name9 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name12 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name15 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-.navigation-links-root-class-name17 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name20 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-.navigation-links-root-class-name23 {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-
-@media(max-width: 767px) {
-  .navigation-links-nav {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-  .navigation-links-navlink {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink1 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink2 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-navlink3 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-}
-
-.home-container {
+.collaborate-container {
   width: 100%;
   display: flex;
   overflow: auto;
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
 }
-.home-header {
+.collaborate-header {
   width: 1480px;
-  height: 96px;
+  height: 92px;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
@@ -111,16 +18,16 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-navlink {
+.collaborate-navlink {
   display: contents;
 }
-.home-image {
+.collaborate-image {
   width: 91px;
   height: 85px;
   object-fit: cover;
   text-decoration: none;
 }
-.home-container1 {
+.collaborate-container1 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -129,31 +36,25 @@
   align-items: space-between;
   flex-direction: column;
 }
-.home-navlink1 {
-  display: contents;
-}
-.home-component {
-  text-decoration: none;
-}
-.home-nav {
+.collaborate-nav {
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
 }
-.home-icon {
+.collaborate-icon {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
   text-decoration: none;
 }
-.home-burger-menu {
+.collaborate-burger-menu {
   display: none;
 }
-.home-icon02 {
+.collaborate-icon02 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   display: none;
 }
-.home-mobile-menu {
+.collaborate-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
@@ -166,83 +67,116 @@
   justify-content: space-between;
   background-color: #fff;
 }
-.home-nav1 {
+.collaborate-nav1 {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.home-container2 {
+.collaborate-container2 {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-.home-image1 {
+.collaborate-image1 {
   height: 2rem;
 }
-.home-close-mobile-menu {
+.collaborate-close-mobile-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.home-icon04 {
+.collaborate-icon04 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.home-icon06 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.home-icon08 {
+.collaborate-icon06 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
 }
-.home-icon10 {
+.collaborate-icon08 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
+}
+.collaborate-icon10 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.home-banner {
+.collaborate-blog-post-card {
   width: 100%;
-  height: 759px;
   display: flex;
-  padding: var(--dl-space-space-threeunits);
+  overflow: hidden;
+  max-width: var(--dl-size-size-maxwidth);
+  box-shadow: 5px 5px 10px 0px rgba(18, 18, 18, 0.1);
+  transition: 0.3s;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 }
-.home-text {
-  height: 0px;
-  font-size: 3rem;
-  align-self: stretch;
-  text-align: center;
+.collaborate-blog-post-card:hover {
+  transform: scale(1.02);
 }
-.home-text05 {
-  font-size: 20px;
-  max-width: var(--dl-size-size-maxwidth);
-  margin-top: var(--dl-space-space-twounits);
-  text-align: center;
+.collaborate-container3 {
+  height: 301px;
+  display: flex;
+  padding: var(--dl-space-space-twounits);
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.collaborate-text {
+  color: var(--dl-color-gray-500);
+  font-weight: 700;
+  margin-bottom: var(--dl-space-space-halfunit);
+  text-transform: uppercase;
+}
+.collaborate-text01 {
+  font-size: 1.5rem;
+  font-weight: 300;
   margin-bottom: var(--dl-space-space-twounits);
 }
-.home-button {
-  transition: 0.3s;
+.collaborate-text02 {
+  color: var(--dl-color-gray-500);
+  font-weight: 400;
+  margin-bottom: var(--dl-space-space-twounits);
+}
+.collaborate-container4 {
+  width: 100%;
+  display: flex;
+  align-items: center;
   padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-twounits);
-  padding-right: var(--dl-space-space-twounits);
-  padding-bottom: var(--dl-space-space-unit);
+  border-color: var(--dl-color-gray-900);
+  border-width: 1px;
+  flex-direction: row;
+  justify-content: space-between;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 0px;
 }
-.home-button:hover {
-  transform: scale(1.02);
+.collaborate-profile {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
 }
-.home-navlink2 {
-  text-decoration: none;
+.collaborate-image2 {
+  width: var(--dl-size-size-small);
+  height: var(--dl-size-size-small);
+  object-fit: cover;
+  border-radius: var(--dl-radius-radius-round);
 }
-.home-text15:hover {
-  transform: scale(1.02);
+.collaborate-text08 {
+  font-weight: 300;
+  margin-left: var(--dl-space-space-halfunit);
 }
-.home-footer {
+.collaborate-text11 {
+  color: var(--dl-color-gray-700);
+  font-weight: 300;
+}
+.collaborate-footer {
   width: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
@@ -254,27 +188,27 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-container3 {
+.collaborate-container5 {
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
 }
-.home-nav2 {
+.collaborate-nav2 {
   flex: 0 0 auto;
-  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   margin-top: 0px;
   align-items: center;
   flex-direction: row;
+  justify-content: center;
 }
-.home-image2 {
+.collaborate-image3 {
   width: 91px;
   height: 85px;
   object-fit: cover;
 }
-.home-separator {
+.collaborate-separator {
   flex: 0 0 auto;
   width: 100%;
   height: 0px;
@@ -292,7 +226,7 @@
   border-left-width: 0px;
   border-right-width: 0px;
 }
-.home-container4 {
+.collaborate-container6 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -300,98 +234,81 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.home-icon-group2 {
+.collaborate-icon-group2 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
 }
-.home-link1 {
+.collaborate-link1 {
   display: contents;
 }
-.home-icon12 {
+.collaborate-icon12 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
   text-decoration: none;
 }
 @media(max-width: 991px) {
-  .home-icon02 {
+  .collaborate-icon02 {
     display: flex;
-  }
-  .home-text05 {
-    max-width: 100%;
   }
 }
 @media(max-width: 767px) {
-  .home-header {
+  .collaborate-header {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .home-nav {
+  .collaborate-nav {
     display: none;
   }
-  .home-burger-menu {
+  .collaborate-burger-menu {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .home-banner {
+  .collaborate-footer {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .home-text05 {
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-  }
-  .home-footer {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .home-separator {
+  .collaborate-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-left: 0px;
     margin-right: 0px;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container4 {
+  .collaborate-container6 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text17 {
+  .collaborate-text12 {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
 @media(max-width: 479px) {
-  .home-header {
+  .collaborate-header {
     padding: var(--dl-space-space-unit);
   }
-  .home-icon-group {
+  .collaborate-icon-group {
     display: none;
   }
-  .home-mobile-menu {
+  .collaborate-mobile-menu {
     padding: 16px;
   }
-  .home-banner {
-    padding-top: var(--dl-space-space-twounits);
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-    padding-bottom: var(--dl-space-space-twounits);
-  }
-  .home-footer {
+  .collaborate-footer {
     padding: var(--dl-space-space-unit);
   }
-  .home-separator {
+  .collaborate-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container4 {
+  .collaborate-container6 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text17 {
+  .collaborate-text12 {
     text-align: center;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
